loadbalancer/IngressRoute-traefik-dashboard-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-route
  namespace: loadbalancer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.cluster.anderwerse.de`)
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: anderwersede-tls-certificate
